# signsight

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
signsight/: __init__.py  __main__.py  const.py  evaluate.py  model.py  preprocess.py  train.py
signsight/core/: __init__.py  evaluate.py  train.py  utils.py
signsight/inference/: __init__.py  capture.py  detect.py  display.py  predict.py  run.py
