[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signsight"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "mediapipe",
    "numpy",
    "matplotlib",
    "scikit-learn",
]

[project.scripts]
signsight = "signsight.__main__:main"
