[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signsight"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "mediapipe",
    "numpy",
    "matplotlib",
    "scikit-learn",
]

[project.scripts]
signsight = "signsight.__main__:main"

[tool.pylint.master]
extension-pkg-allow-list = ["cv2", "mediapipe"]

[tool.pylint.TYPECHECK]
ignored-modules = ["cv2", "mediapipe"]
ignored-classes = ["cv2", "mediapipe"]

